fix dark mode text color (#140)

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -46,5 +46,5 @@ html.dark {
   --background-description: #202529;
   --card-background: #292e33;
   --header-background: #000;
-  --text: #ffffff;
+  --text: #e8e8e8;
 }
